--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -1,5 +1,4 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="72dp"
     android:background="?android:attr/selectableItemBackground"
@@ -15,12 +14,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="72dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginStart="72dp"
+        android:layout_marginLeft="72dp"
         android:gravity="center_vertical"
         android:orientation="vertical">
 
@@ -39,8 +38,8 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="1"
-            android:paddingRight="16dp"
             android:paddingEnd="16dp"
+            android:paddingRight="16dp"
             android:text="Subtitle description,lorem ipsum text generic"
             android:textColor="#999999" />
 
@@ -49,11 +48,11 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginLeft="72dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginStart="72dp"
+        android:layout_marginLeft="72dp"
         android:background="#ECECEC" />
 
 </RelativeLayout>
